--- a/css/styles.css
+++ b/css/styles.css
@@ -62,31 +62,30 @@ div.container {
     display: flex;
     align-items: center;
 }
-.main-nav__logo-styleheader {
+.logo-styleheader {
     font-family: "Raleway", sans-serif;
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
     color: var(--second-logocolor);
 }
-.main-nav__firstpart-logo,
-.logofuter__firstpart-logo {
+.firstpart-logo {
     color: var(--special-color);
 }
-.main-nav__navmenu {
+.navmenu {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     margin-left: 93px;
     display: flex;
 }
-.main-nav__items {
+.navmenu-items {
     list-style-type: none;
 }
-.main-nav__items:not(:last-child) {
+.navmenu-items:not(:last-child) {
     margin-right: 50px;
 }
-.main-nav__item {
+.navmenu-item {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em; 
@@ -100,7 +99,7 @@ div.container {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-nav__item.main-nav__item--current::after {
+.navmenu-item.current::after {
     content: "";
     display: block;
     position: absolute;
@@ -111,7 +110,7 @@ div.container {
     border-radius: 2px;
     
 }
-.contact__item {
+.contact-item {
     display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -125,10 +124,10 @@ div.container {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main-nav__item:hover,
-.contact__item:hover,
-.main-nav__item:focus,
-.contact__item:focus {
+.navmenu-item:hover,
+.contact-item:hover,
+.navmenu-item:focus,
+.contact-item:focus {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -136,7 +135,7 @@ div.container {
     color: var(--special-color);
     
 }
-.main-nav__item.main-nav__item--current {
+.navmenu-item.current {
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -149,21 +148,21 @@ div.container {
     margin-left: auto;
     display: flex;
 }
-.contact__items {
+.contact-items {
     list-style-type: none;
 }
-.contact__items:not(:last-child) {
+.contact-items:not(:last-child) {
     margin-right: 50px;
 }
-.contact__icon {
+.svg-icon {
     margin-right: 10px;
     fill: currentColor;
 }
-.contact__icon--mailsize {
+.lettermail {
     height: 12px;
     width: 16px;
 }
-.contact__icon--phonesize {
+.phonephone {
     height: 16px;
     width: 10px;
 }
@@ -574,7 +573,7 @@ div.adv-with-titles {
     padding-top: 60px;
     padding-bottom: 60px;
 }
-.logofuter__logostylefooter {
+.logo-stylefooter {
     font-family: "Raleway";
     font-size: 26px;
     line-height: 1.19;
@@ -585,15 +584,15 @@ div.adv-with-titles {
 .mainadress {
     margin-top: 20px;
 }
-.mainadress__adress {
+.adress {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
-.mainadress__item:not(:first-child) {
+.adress-item:not(:first-child) {
     margin-top: 9px;
 }
-.mainadress__itemmap {
+.adress-itemmap {
     color: var(--additional-color);
     text-decoration: none;
     font-size: 14px;
@@ -604,8 +603,8 @@ div.adv-with-titles {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mainadress__itemmap:hover,
-.mainadress__itemmap:focus {
+.adress-itemmap:hover,
+.adress-itemmap:focus {
     color: var(--special-color);
     text-decoration: none;
     font-size: 14px;
@@ -613,7 +612,7 @@ div.adv-with-titles {
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
-.mainadress__itemcontact {
+.adress-itemcontact {
     text-decoration: none;
     font-size: 14px;
     font-style: normal;
@@ -624,8 +623,8 @@ div.adv-with-titles {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.mainadress__itemcontact:hover,
-.mainadress__itemcontact:focus {
+.adress-itemcontact:hover,
+.adress-itemcontact:focus {
     text-decoration: none;
     font-size: 14px;
     font-style: normal;
@@ -890,9 +889,7 @@ margin: 40px 40px 22px 40px;
     letter-spacing: 0.01em;
     color: var(--secondary-textcolor);
     margin-bottom: 4px;
-    position: absolute;
-    left: 0;
-    top: 0;
+    display: inline-block;
 }
 
 .form-input {
@@ -909,7 +906,7 @@ margin: 40px 40px 22px 40px;
     border: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px; 
-    margin-top: 18px;
+    
     transition-property: border;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -935,9 +932,7 @@ margin: 40px 40px 22px 40px;
 .form-element textarea {
     padding-left: 16px;
     max-width: 429px;
-    min-width: 429px;
-    max-height: 108px;
-    min-height: 108px;
+    resize: none;
 }
 .modal-icon {
     position: absolute;
