--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,13 @@
-@import 
+@import "utils/vars";
+@import "components/common";
+@import "components/socialnetworks";
+@import "components/header";
+@import "components/herobox";
+@import "components/advantages";
+@import "components/ourproducts";
+@import "components/team";
+@import "components/clients";
+@import "components/footer";
+@import "components/modal";
+@import "components/portfolio";
+@import "components/portfoliobuttons";
