--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -68,7 +68,6 @@
     &__element {
         position: relative;
         margin: 0;
-        height: 58px;
         margin-bottom: 10px;
 
         & label {
@@ -115,7 +114,7 @@
 
         & textarea {
             padding-left: 16px;
-            max-width: 429px;
+            width: 429px;
             resize: none;
         }
 
@@ -140,7 +139,6 @@
 
     &__elementtextarea {
         width: 448px;
-        height: 138px;
         margin-bottom: 20px;
     }
 
