--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -140,9 +140,12 @@
         justify-content: center;
     }
 
+    &__label {
+        margin-right: 12px;
+    }
+
     &__input {
         margin: 0;
-        margin-right: 12px;
         padding: 0;
         padding-left: 16px;
         width: 342px;
